# DupFind

./: CMakeLists.txt  CMakePresets.json  LICENSE.md  PRIVACY.md  README.md  implementation_plan.md  resources.qrc  task.md
Deploy/: AppxManifest.xml.in
debian/: changelog  control  copyright  dupfind.desktop  rules
include/: DatabaseManager.hpp  ImageHasher.hpp  MainWindow.hpp  ResultFilterProxyModel.hpp  ResultItemDelegate.hpp  ResultListModel.hpp  SimilaritySearch.hpp
resources/: style.qss
src/: CmdMain.cpp  DatabaseManager.cpp  ImageHasher.cpp  MainWindow.cpp  ResultFilterProxyModel.cpp  ResultItemDelegate.cpp  ResultListModel.cpp  SimilaritySearch.cpp  main.cpp
translations/: dupfind_de.ts  dupfind_en.ts  dupfind_es.ts  dupfind_ja.ts  dupfind_ko.ts  dupfind_pl.ts  dupfind_pt.ts  dupfind_ru.ts  dupfind_zh_CN.ts  dupfind_zh_TW.ts
